--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
     <div class='bigBox'>
       <div class='loginBox'>
         <div class='box50'><img src="img/logoimg.png"></div>
-        <div class='box50 ptd-40 plr-30'>
-          <p class='t-b-28 text-l pd-40'>程炬集團</br>內部系統</p>
-          <input class='input-f md-20' type="" name="" placeholder="請輸入帳號">
-          <input class='input-f md-20' type="" name="" placeholder="請輸入">
-          <div class='boxsFull md-20'>
-            <div class='boxsInline order-l'>ddd</div>
-            <div class='boxsInline order-r'>fff</div>
+        
+        <div class='box50 p-td-40 p-lr-30'>
+          <p class='t-b-28 text-l p-d-40'>程炬集團</br>內部系統</p>
+          <label>
+            <input class='input-f m-d-20' type="" name="" placeholder="請輸入帳號">
+            <input class='input-f m-d-20' type="" name="" placeholder="請輸入">
+          </label>
+          <div class='boxsFull m-d-20'>
+            <div class='boxsInline order-l'>
+              <label>
+                <input class='rememberCheck' type="checkbox" value="記住我" />
+                <span>記住我</span>
+              </label>
+            </div>
+            <div class='boxsInline order-r'>
+              <a class='forgetPW' href='forget.html'>忘記密碼</a>
+            </div>
           </div>
           <a class='btn-full-blue' href="menu.html">登入</a>
         </div>
