--- a/menu.html
+++ b/menu.html
@@ -14,25 +14,68 @@
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- 左 -->
+      <div class='box50 text-l'>
+        <img class='p-t-16 p-r-15 order-l' src="img/logo.png">
+        <div class="search-container">
+          <form action="">
+            <input type="text" placeholder="搜尋系統" name="search">
+            <button class='searchBtn' type="submit"><i class="icon-search"></i></button>
+          </form>
+        </div>
+      </div>
+      <!-- 右 -->
+      <div class='box50 text-r'>
+        <p class='topName'>嗨，王小明</p>
+        <div class='iconBoxs'>
+          <a class='iconLink linkBlue icon-account_box' href=""></a>
+        </div>
+      </div>
+    </header>
 
-    <p class='boxs-max990 menu-title'>請選擇系統</p>
-
+    <!-- icon選單 -->
     <div class='boxs-max990'>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
-      <a class='menuArea' href=""></a>
+      <p class='menu-title'>請選擇系統</p>
+
+      <div class='boxsFull'>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon01'></p>
+          <p>詢價系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+        <a class='menuArea' href="board_country.html">
+          <p class='icon-menu_icon02svg'></p>
+          <p>其他系統</p>
+        </a>
+      </div>
     </div>
   </body>
 </html>
