--- a/board_country_detail.html
+++ b/board_country_detail.html
@@ -36,9 +36,13 @@
       <div class='boxsFull'>
         <div class='lMenu'>功能選單</div>
         <div class='rTagBox'>
+          <div class='tagBoxL'>
+            <a class='tag' href="board_country.html">&lt; &nbsp;回上一頁</a>
+          </div>
           <div class='tagBox'>
             <a class='tag' href="menu.html">內網首頁</a>
-            <a class='tag' href="board_forget_pw.html">取回密碼</a>
+            <a class='tag' href="board_country.html">國別管理</a>
+            <a class='tag'>國別詳細頁</a>
           </div>
         </div>
       </div>
@@ -49,8 +53,8 @@
           <div class='block-l-menuBox'>
             <span class="m-menu-t">系統管理者</span>
             <div class="m-smenu">
-              <a class='l-menu-active' href="board_forget_pw.html" >取回密碼</a>
-              <a href="board_country.html">國別管理</a>
+              <a href="board_forget_pw.html" >取回密碼</a>
+              <a class='l-menu-active' href="board_country.html">國別管理</a>
               <a href="board_phrase.html" >片語管理</a>
               <a href="board_template.html" >詢價範本管理</a>
             </div>
@@ -90,16 +94,30 @@
         <!-- 右內容 -->
         <div class='block-r'>
           <div class='centBoxs'>
-            <div class='boxsFull'>
-              <p class="t-blue-20 p-d-30">取回密碼</p>
-            </div>
+            <!-- <div class='boxsFull'>
+              <p class="t-blue-20 p-d-30">新增國別</p>
+            </div> -->
 
             <div class='boxsFull'>
-              <p class='t-r-15 text-l p-d-15'>請輸入帳號使用郵件信箱，系統將發送一封認證信至使用者信箱</p>
-              <label>
-                <input class='input-f in-w-40 m-d-100' type="" name="" placeholder="請輸入帳號">
-              </label>
-              <button class='btn-half-orange icon-send'>&nbsp;寄出認證信</button>
+              <div class='boxs30'>
+                <p class='t-r-15 text-l p-d-10'>國別中文：</p>
+                <p class='t-grey-15 text-l p-d-10'>台灣</p>
+              </div>
+              <div class='boxs30'>
+                <p class='t-r-15 text-l p-d-10'>國別英文：</p>
+                <p class='t-grey-15 text-l p-d-10'>TW</p>
+              </div>
+              <div class='boxs30'>
+                <p class='t-r-15 text-l p-d-10'>編碼：</p>
+                <p class='t-grey-15 text-l p-d-10'>編碼01</p>
+              </div>
+
+              <div class='boxsFull m-td-25'>
+                <p class='t-r-15 text-l p-d-10'>備註：</p>
+                <p class='t-grey-15 text-l p-d-10'>
+                備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字備註文字
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -107,9 +125,6 @@
     </div>
   </body>
 </html>
-
-
-
 
 
 
